finished basic analog clock drawing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas id="canvas" width="400" height="400" style="background-color:#333"></canvas>
+    <div class="container">
+        <section class="header">
+
+        </section>
+
+        <section class="main_content>
+            <canvas id="canvas" width="400" height="400" style="background-color:white"></canvas>
+        </section>
+        
+        <section class="footer">
+
+        </section>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
