almost fully complete.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link href="https://fonts.googleapis.com/css?family=Spicy+Rice" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header role="banner">
         <p class="bsd">BS"D</p>
-        <p class="title">The Talmudic Clock</p>
+        <p class="title">The Talmudic Clock App</p>
     </header>
-    <main class="clocks">
+    <main class="clocks" role="main">
         <div class="regular_digital_clock">
             <p>Regular</p>
             <p>Time</p>
@@ -27,8 +27,24 @@
             <span class="talmudicTimeDisplay">...</span>
         </div>
         <div class="analog_clock">
-                <canvas id="canvas" width="400px" height="400px"></canvas>
+                <header class="analog_clock_header">Talmudic Clock</header>
+                <canvas id="canvas" width="350px" height="350px"></canvas>
         </div>
+        <div class="settings_container">
+            <span class="settings_header">Settings</span>
+            <ul class="settings-button-list">
+                <li>
+                    <button type="button" class="list-view button"><p>List-View</p></button>
+                </li>
+                <li>
+                    <button type="button" class="change-location button"><p>Change Location</p></button>
+                </li>
+                <li>
+                    <button type="button" class="report-a-problem button"><p>Report a Problem</p></button>
+                </li>
+            </ul>
+        </div>
+        <div class="list_container"></div>
     </main>
     <footer>
         <button type="button" class="settings"></button>
