minor touch ups

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="bsd">BS"D</p>
         <p class="title">The Talmudic Clock App</p>
     </header>
-    <main class="clocks" role="main">
+    <main class="clocks lists" role="main">
         <div class="regular_digital_clock">
             <p>Regular</p>
             <p>Time</p>
