--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Spicy+Rice" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -38,20 +37,20 @@
                     <button type="button" class="info button"><p>Info</p></button>
                 </li>
                 <li class="list-view_button">
-                    <button type="button" role="button" class="list-view button"><p>List-View</p></button>
+                    <button type="button" class="list-view button"><p>List-View</p></button>
                 </li>
                 <li class="change-location_button">
-                    <button type="button" role="button" class="change-location button"><p>Change Location</p></button>
+                    <button type="button" class="change-location button"><p>Change Location</p></button>
                 </li>
                 <li class="report-a-problem_button">
-                    <button type="button" role="button" class="report-a-problem button"><p>Report a Problem</p></button>
+                    <button type="button" class="report-a-problem button"><p>Report a Problem</p></button>
                 </li>
             </ul>
         </div>
         <div class="list_container"></div>
     </main>
     <footer>
-        <button type="button" role="button" class="settings" alt="settings"></button>
+        <button type="button" class="settings" alt="settings"></button>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="index.js"></script>
