--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div class="list_container"></div>
     </main>
     <footer>
+        <span class="location_display"></span>
         <button type="button" class="settings" alt="settings"></button>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
