--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <header class="analog_clock_header">Talmudic Clock</header>
                 <canvas id="canvas" width="350px" height="350px"></canvas>
         </div>
-        <div class="settings_container">
+        <div class="settings_container" aria-controls="list_container">
             <span class="settings_header">Settings</span>
             <ul class="settings-button-list">
                 <li class="info_button">
@@ -47,7 +47,7 @@
                 </li>
             </ul>
         </div>
-        <div class="list_container"></div>
+        <div class="list_container" role="region" id="list_container" aria-live="polite"></div>
     </main>
     <footer>
         <span class="location_display"></span>
