.md, .js, and .html updates

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <button type="button" class="info button"><p>Info</p></button>
                 </li>
                 <li class="list-view_button">
-                    <button type="button" class="list-view button"><p>List-View</p></button>
+                    <button type="button" class="list-view button"><p>List Prayer Times</p></button>
                 </li>
                 <li class="change-location_button">
                     <button type="button" class="change-location button"><p>Change Location</p></button>
